# monthly-report

./: .gitignore  README.md  package-lock.json  pyproject.toml
client/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
client/src/: index.html  main.ts
client/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  global.ts
client/src/app/guards/: authentication.guard.ts
server/: .env  __init__.py  main.py  routers.py
server/app/availability_logs/: availability_logs_model.py  availability_logs_repository.py  availability_logs_schema.py  dependency.py  raw_queries.py
server/app/customer/: customer.py  customer_model.py  customer_repository.py  customer_schema.py  dependency.py  resolver.py
server/app/service/: service_model.py  service_schema.py
server/app/tenant/: dependency.py  raw_queries.py  tenant_model.py  tenant_repository.py  tenant_schema.py
server/controllers/: availability_logs_controller.py  customer_controller.py  service_controller.py  tenant_controller.py
server/database/: database.py  dependency.py
server/migration/: migration.py
server/security/: dependency.py  security.py  token_model.py  token_service.py
server/services/: date_service.py  dependency.py  query_service.py
server/settings/: dependency.py  resolver.py  settings.py  settings_model.py
sql/: database.db
tests/: conftest.py  test_main.py
tests/app/customer/: test_customer_repository.py
tests/controllers/: test_customer_controller.py  test_customer_controller_mock.py
(+34 files in other folders)
