[project]
name = "monthly-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.0",
    "sqlmodel>=0.0.22",
    "typing-inspect>=0.9.0",
]
